fire noc close button and PT alignment issues

--- a/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/YearDialogue/index.scss
+++ b/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/YearDialogue/index.scss
@@ -11,4 +11,5 @@
 
 .year-dialog-content {
   max-width: 370px !important;
+  bottom: 50px;
 }
